--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,14 @@
             <version>7.20.0.Final</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.opencsv/opencsv -->
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>4.0</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
